// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseJSONLintArgs should match snapshot when parsing with "." 1`] = `
Array [
  "packages/hapi-linter/src/eslintrc/hapi.rules.eslintrc.json",
  "packages/node-linter/src/eslintrc/node.dev-rules.eslintrc.json",
  "packages/node-linter/src/eslintrc/node.rules.eslintrc.json",
  "packages/node-linter/src/runfile/blacklist.runfile.json",
  "packages/react-linter/src/eslintrc/react.rules.eslintrc.json",
  "packages/react-native-linter/src/eslintrc/react-native.rules.eslintrc.json",
]
`;

exports[`parseJSONLintArgs should match snapshot when parsing with "README.md" 1`] = `Array []`;

exports[`parseJSONLintArgs should match snapshot when parsing with "package.json" 1`] = `
Array [
  "package.json",
]
`;

exports[`parseJSONLintArgs should match snapshot when parsing with "packages/" 1`] = `
Array [
  "packages/hapi-linter/src/eslintrc/hapi.rules.eslintrc.json",
  "packages/node-linter/src/eslintrc/node.dev-rules.eslintrc.json",
  "packages/node-linter/src/eslintrc/node.rules.eslintrc.json",
  "packages/node-linter/src/runfile/blacklist.runfile.json",
  "packages/react-linter/src/eslintrc/react.rules.eslintrc.json",
  "packages/react-native-linter/src/eslintrc/react-native.rules.eslintrc.json",
]
`;

exports[`parseJSONLintArgs should match snapshot when parsing with "packages/hapi-linter/" 1`] = `
Array [
  "packages/hapi-linter/src/eslintrc/hapi.rules.eslintrc.json",
]
`;

exports[`parseJSONLintArgs should match snapshot when parsing with "packages/hapi-linter/package.json" 1`] = `
Array [
  "packages/hapi-linter/package.json",
]
`;

exports[`parseJSONLintArgs should match snapshot when parsing with "packages/node-linter/" 1`] = `
Array [
  "packages/node-linter/src/eslintrc/node.dev-rules.eslintrc.json",
  "packages/node-linter/src/eslintrc/node.rules.eslintrc.json",
  "packages/node-linter/src/runfile/blacklist.runfile.json",
]
`;

exports[`parseJSONLintArgs should match snapshot when parsing with "packages/node-linter/src/runfile/blacklist.runfile.json" 1`] = `
Array [
  "packages/node-linter/src/runfile/blacklist.runfile.json",
]
`;

exports[`parseJSONLintArgs should match snapshot when parsing with "packages/react-linter/" 1`] = `
Array [
  "packages/react-linter/src/eslintrc/react.rules.eslintrc.json",
]
`;

exports[`parseJSONLintArgs should match snapshot when parsing with "packages/react-native-linter/" 1`] = `
Array [
  "packages/react-native-linter/src/eslintrc/react-native.rules.eslintrc.json",
]
`;

exports[`parseJSONLintArgs should match snapshot when parsing with "packages/react-native-linter/src/eslintrc/react-native.rules.eslintrc.json" 1`] = `
Array [
  "packages/react-native-linter/src/eslintrc/react-native.rules.eslintrc.json",
]
`;

exports[`parseJSONLintArgs should match snapshot when parsing with "runfile.js" 1`] = `Array []`;
